--- a/pmalloc-config.cmake.in
+++ b/pmalloc-config.cmake.in
@@ -12,8 +12,11 @@ macro(pmalloc_die msg)
   return()
 endmacro()
 
-# By default, use static.
+# By default, use static libraries if they exist.
 set(pmalloc_cfg static)
+if(NOT EXISTS "${CMAKE_CURRENT_LIST_DIR}/pmalloc-static.cmake")
+  set(pmalloc_cfg shared)
+endif()
 
 # Check all the components and see which configuration is specified. If the user
 # specifies a non-existant component, bail.
